The date field added in the ticket booking system

--- a/ticket/templates/ticket/vehiclelist.html
+++ b/ticket/templates/ticket/vehiclelist.html
@@ -186,6 +186,7 @@
         <div class="vehicle-info">
             <h2>{{ vehicle.vehicle_type }} - {{ vehicle.vehicle_number }}</h2>
             <p>Total Seats: {{ vehicle.total_seats }}</p>
+             <p>Depature Date: {{ vehicle.departure_date }}</p>
         </div>
 
         <div class="seat-container">
