The price is added in model it is passed to java wit params for authentication and it is again retrive in django

--- a/ticket/templates/ticket/booking_confirmation.html
+++ b/ticket/templates/ticket/booking_confirmation.html
@@ -164,7 +164,16 @@
                 <span class="label">Departure Date:</span>
                 <span class="value">{{ departure_date }}</span>
             </div>
+
+             <div class="detail-row">
+                <span class="label">Departure Date:</span>
+                <span class="value">{{ price }}</span>
+            </div>
+
+
         </div>
+
+        
 
         <div class="payment-section">
             <button class="pay-button">Proceed to Payment</button>
