render to khalti completed half part is done now half part remaining

--- a/ticket/templates/ticket/vechileapi.html
+++ b/ticket/templates/ticket/vechileapi.html
@@ -233,12 +233,14 @@
                     <h2>Select Payment Method</h2>
 
                     <a href="{% url 'esewa_book' %}" class="payment-btn">Pay with eSewa</a>
+                    
+                    <a href="{% url 'khalti_book' %}" class="payment-btn">Pay with Khalti</a>
+                   
 
 
              
 
 
-                    <a href="/khalti/pay/{{ vehicle.id }}" class="payment-btn">Pay with Khalti</a>
                 </div>
             </div>
 
